# recon-ninja-v2

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MODULES.md  README.md  install.sh  package-lock.json  package.json  pyproject.toml  ruff.toml  worklog.md
.github/workflows/: ci.yml
config/: default_config.yaml
recon_ninja/: __init__.py  main.py
recon_ninja.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
recon_ninja/core/: __init__.py  config.py  display.py  engine.py  loot.py  models.py  report.py  runner.py  state.py  utils.py
recon_ninja/modules/: __init__.py  database.py  dns.py  ftp.py  kerberos.py  ldap.py  nfs.py  osint.py  rdp.py  rpc.py  smb.py  smtp.py  snmp.py  ssh.py  ssl.py  vnc.py  vuln_correlate.py  winrm.py
recon_ninja/modules/web/: __init__.py  web_cms.py  web_core.py  web_dirfuzz.py  web_tech.py  web_vuln.py
recon_ninja/utils/: __init__.py  checker.py  hosts.py  installer.py  network.py  nmap_parser.py  wordlists.py
results/127.0.0.1/: scan.state
results/127.0.0.1_20260527_081416/: report.json  state.json
results/127.0.0.1_20260527_081516/: report.json  report.md  state.json
results/127.0.0.1_20260527_081601/: report.json  state.json
results/127.0.0.1_20260527_094823/: 00_SUMMARY.md  00_findings.json  state.json
src/app/: globals.css  layout.tsx  page.tsx
tests/: test_config.py  test_engine.py  test_loot.py  test_models.py  test_module_contract.py  test_modules.py  test_parser.py  test_report.py  test_runner.py  test_state.py  test_utils.py  test_web.py
upload/: release_arena_sg-release-1.ovpn
