[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reconninja"
version = "2.0.0"
description = "Automated reconnaissance tool for CTFs and pentesting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ReconNinja Team"}]
keywords = ["recon", "pentesting", "ctf", "hackthebox", "oscp", "security", "nmap", "enumeration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.0",
    "typer>=0.9",
    "click>=8.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "aiofiles>=23.0",
]

[project.urls]
Homepage = "https://github.com/ruwithma/recon-ninja-v2"
Repository = "https://github.com/ruwithma/recon-ninja-v2"
Issues = "https://github.com/ruwithma/recon-ninja-v2/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.13", "mypy>=1.10", "pre-commit>=3.4"]
wappalyzer = ["python-Wappalyzer>=0.3.0"]

[project.scripts]
reconninja = "recon_ninja.main:app"

[tool.setuptools.packages.find]
include = ["recon_ninja*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
